# blackjack

./: .gitignore  README.md  __player__.py  deploy  main.py  pyproject.toml  setup.py  test.py  todo.notes
blackjack/: cli.py
blackjack/twenty_won.egg-info/: PKG-INFO  SOURCES.txt
src/blackjack/: __game__old__.py  deck.py  game.py  player.py
tests/: test_game.py
twentywon/: __init__.py
twentywon/twentywon.egg-info/: PKG-INFO  SOURCES.txt
